plugins { id 'java' }

sourceCompatibility = 11
targetCompatibility = 11

group 'com.dynxsty.bot'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    jcenter()
    maven { url 'https://m2.dv8tion.net/releases' }
    maven { url 'https://jitpack.io' }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'

    implementation 'net.dv8tion:JDA:4.3.0_297'
    implementation 'org.mongodb:mongodb-driver:3.12.9'
    implementation 'com.google.code.gson:gson:2.8.7'
    implementation 'org.yaml:snakeyaml:1.29'

    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
    implementation group: 'com.mashape.unirest', name: 'unirest-java', version: '1.3.1'

    // H2 Database
    implementation group: 'com.h2database', name: 'h2', version: '1.4.200'

    // Lombok Annotations
    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'
    testCompileOnly 'org.projectlombok:lombok:1.18.20'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'

//    [JDA:feature/threads]
//    compile 'com.github.dv8fromtheworld:jda:a85ca7eeb2b423712cc25e98eff2b72f20395fe3'

}

jar {
    archiveName="javabot.zip"
    from {
        configurations.runtime.collect {
            it.isDirectory() ? it : zipTree(it)
        }

        configurations.compile.findAll{ !it.name.endsWith('pom') } .collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
    manifest{ attributes("Manifest-Version": "1.0", "Main-Class": "com.javadiscord.javabot.Bot") }
    exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA' }

tasks.withType(JavaCompile){ options.encoding = 'UTF-8'}
tasks.withType( JavaCompile ).configureEach {
    options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
}
test { useJUnitPlatform() }
